# jw-agent-toolkit

./: .gitignore  .vercelignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml  cross-lang.yml  live-smoke.yml  publish-create-jw-agent.yml  wol-extension.yml
apps/desktop/: README.md  index.html  package.json  presenter.html  vite.config.js
apps/desktop/src/: main.js  presenter.css  presenter.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/obsidian-jw-bridge/: README.md  esbuild.config.mjs  manifest.json  package.json
apps/obsidian-jw-bridge/src/: main.ts  toolkitClient.ts
apps/wol-browser-extension/: .eslintrc.cjs  .gitignore  README.md  eslint.config.js  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/wol-browser-extension/scripts/: package.mjs
apps/wol-browser-extension/src/: api.ts  background.ts  config.ts  content_script.ts  types.ts
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  VISION.md  VISION_AUDIT.md
docs/conceptos/: ci-y-testing.md  decisiones-de-diseno.md  estrategia-multi-idioma.md  extrapolar-a-otras-religiones.md  flujos-end-to-end.md  glosario.md  integracion-jw-library.md  integracion-obsidian.md  integraciones-priorizadas.md  inventario-endpoints.md  polyglot-python.md  programa-semanal-mwb-w.md
docs/cookbook/: 01-resolve-bible-reference.md  02-search-and-synthesize.md  03-telegram-bot.md  04-finetune-llama-3.md  05-add-parser.md  06-custom-embedder.md  07-add-nli.md  08-publish-to-pypi.md  09-trace-agent-run.md  10-calibrate-golden-case.md  11-browser-extension.md  12-capacitor-app.md  README.md
docs/cookbook/_common/: __init__.py  fakes.py
docs/guias/: agent-tracing.md  apologetica-avanzada.md  asistente-de-ministerio.md  asr-diarizacion.md  audio-premium.md  audio-y-voz.md  bible-knowledge-graph.md  book-camera.md  broadcasting-visual-search.md  calendario-y-eventos.md  canticos-del-reino.md  citation-validator.md  compositor-de-predicacion.md  concordancia-exacta.md  conductor-de-estudio.md  conectar-mcp-a-claude-desktop.md  constrained-decoding.md  construir-un-agente.md  content-provenance.md  conversation-sparring.md  doctrinal-drift.md  doctrinal-reasoner.md  embeddings-y-rerank.md  estudio-personal.md  eval-doctrinal.md  exportador-hoja-de-estudio.md  extender-el-parser.md  familia-y-ninos.md  family-voice-clone.md  fidelity-nli.md  fine-tuning-local.md  generacion-ilustrativa.md  historical-pdf-ingest.md  idiomas-expandidos.md  image-quote-verifier.md  indexar-y-buscar-con-rag.md  informe-precursor.md  infraestructura-fase9.md  infraestructura-operacional.md  integracion-jw-library.md  (+33 more)
docs/plugin-sdk/: authoring.md  capabilities.md  overview.md  security.md
docs/referencia/: integraciones.md  jw-agents.md  jw-cli.md  jw-core.md  jw-mcp.md  jw-rag.md
docs/superpowers/plans/: 2026-05-30-fase-22-eval-doctrinal-plan.md  2026-05-30-fase-23-citation-validator-plan.md  2026-05-30-fase-24-study-conductor-plan.md  2026-05-30-fase-25-news-monitor-plan.md  2026-05-30-fase-26-student-parts-plan.md  2026-05-30-fase-27-pioneer-report-plan.md  2026-05-30-fase-28-concordance-plan.md  2026-05-30-fase-29-letter-composer-plan.md  2026-05-30-fase-30-kingdom-songs-plan.md  2026-05-30-fase-31-exporter-plan.md  2026-05-30-fase-32-life-topics-plan.md  2026-05-30-jw-finetune-f1-mvp.md  2026-05-31-fase-33-embed-rerank-plan.md  2026-05-31-fase-34-audio-premium-plan.md  2026-05-31-fase-35-constrained-decoding-plan.md  2026-05-31-fase-36-vlm-ocr-plan.md  2026-05-31-fase-37-colpali-visual-plan.md  2026-05-31-fase-38-jw-gen-plan.md  2026-05-31-fase-39-nli-runtime-plan.md  2026-05-31-fase-40-content-provenance-plan.md  2026-05-31-fase-41-plugin-sdk-plan.md  2026-05-31-fase-42-scaffolding-plan.md  2026-05-31-fase-43-agent-tracing-plan.md  2026-05-31-fase-44-synth-judge-plan.md  2026-05-31-fase-45-semantic-chunking-plan.md  2026-05-31-fase-46-canonical-versification-plan.md  2026-05-31-fase-47-jw-core-js-minimal-plan.md  2026-05-31-fase-48-wol-browser-ext-plan.md  2026-06-01-fase-49-second-brain-plan.md  2026-06-04-fase-57-jw-meeting-media-plan.md  2026-06-04-fase-58-bible-knowledge-graph-plan.md  2026-06-04-fase-61-letta-memory-plan.md  2026-06-04-fase-62-marker-markitdown-plan.md  2026-06-04-fase-64-whisperx-asr-plan.md  2026-06-04-fase-66-mcp-jw-brain-plan.md  2026-06-04-master-integracion-stars-plan.md  2026-06-11-fase-65-meta-orchestrator-plan.md  2026-06-11-fase-68-talk-lab-plan.md
docs/superpowers/specs/: 2026-05-30-fase-22-eval-doctrinal-design.md  2026-05-30-fase-23-citation-validator-design.md  2026-05-30-fase-24-study-conductor-design.md  2026-05-30-fase-25-news-monitor-design.md  2026-05-30-fase-26-student-parts-design.md  2026-05-30-fase-27-pioneer-report-design.md  2026-05-30-fase-28-concordance-design.md  (+36 more)
scripts/: discover_wol_resources.py  download_jwpub.py  dump_shared_fixture.py  explore_alt_subject.py  explore_datapid.py  explore_datapid2.py  explore_nwtsty.py  explore_nwtsty2.py  explore_pubcode_anchors.py  explore_topic_index.py  explore_trinity.py  fetch_religions_subject.py  fetch_topic_fixtures.py  inspect_epub.py  inspect_jwpub.py  inspect_jwpub2.py  live_smoke.py  live_test_phase11.py  live_test_phase3.py  live_test_phase4.py  probe_hub_api.py  probe_hub_api2.py  record_cassettes.sh  sync.sh  try_jwpub_decrypt.py  try_jwpub_decrypt2.py  try_jwpub_decrypt3.py  try_jwpub_decrypt4.py
scripts/tests/: test_live_smoke.py
shared/data/: bible_references_golden.json
skills/jw-apologetics/: SKILL.md
skills/jw-daily-text/: SKILL.md
skills/jw-meeting-prep/: SKILL.md
skills/jw-research/: SKILL.md
skills/jw-verse-lookup/: SKILL.md
tools/pytest-cookbook/: README.md  pyproject.toml
tools/pytest-cookbook/src/pytest_cookbook/: __init__.py  plugin.py
tools/pytest-cookbook/tests/: __init__.py  test_extraction.py  test_pytest_integration.py
website/: README.md  astro.config.mjs  package-lock.json  package.json  vercel.json
website/public/: manifest.json  robots.txt
website/src/: content.config.ts
(+68 files in other folders)
