[project]
name = "jw-agent-toolkit"
version = "0.1.0"
description = "Agentic toolkit for jw.org / wol.jw.org — core library + CLI + MCP server + agents + skills"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Elias", email = "elias@cipreholding.com" }
]
license = "GPL-3.0-only"

[tool.uv.workspace]
members = [
    "packages/jw-core",
    "packages/jw-cli",
    "packages/jw-mcp",
    "packages/jw-rag",
    "packages/jw-agents",
    "packages/jw-finetune",
    "packages/jw-eval",
    "packages/jw-gen",
    "packages/jw-brain",
    "packages/jw-meeting-media",
    "packages/create-jw-agent",
    "tools/pytest-cookbook",
]

[tool.uv.sources]
jw-core = { workspace = true }
jw-cli = { workspace = true }
jw-mcp = { workspace = true }
jw-rag = { workspace = true }
jw-agents = { workspace = true }
jw-finetune = { workspace = true }
jw-eval = { workspace = true }
jw-gen = { workspace = true }
jw-brain = { workspace = true }
jw-meeting-media = { workspace = true }
create-jw-agent = { workspace = true }
pytest-cookbook = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-recording>=0.13.0",
    "pytest-httpx>=0.30.0",
    "hypothesis>=6.100.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    # Optional runtime deps several test suites import unconditionally
    # (graceful skip via importorskip is brittle when monorepo tests collect
    # together). Keeping these in dev makes a fresh uv sync run all suites.
    "fastapi>=0.115.0",
    "duckdb>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    # E741: short var names like `l` are fine in list comprehensions over
    # already-clear contexts (e.g. `for l in languages`).
    "E741",
    # SIM108: ternary preference. The explicit if/else is often clearer.
    "SIM108",
    # B904: raise-from style preference; we already preserve causes where
    # it matters (CDNError, TopicIndexError, etc.).
    "B904",
    # SIM105: `contextlib.suppress(...)` over try/except/pass is style only;
    # `try/except/pass` reads fine and is widely understood.
    "SIM105",
    # SIM118: `key in d` over `key in d.keys()` — gain is marginal vs blast
    # radius of touching working code in core stores.
    "SIM118",
    # SIM103: returning negated condition vs `if/else return` is taste.
    "SIM103",
    # SIM113: enumerate vs manual index — taste.
    "SIM113",
    # SIM117: nested `with` statements that share the same line read better
    # nested when each context has distinct semantics (e.g. tracer.run that
    # opens an envelope vs tracer.step that opens a step). Combining them
    # hides the nesting.
    "SIM117",
    # UP042: `class X(str, Enum)` is a legitimate pattern in Python 3.13.
    # The "use StrEnum" suggestion changes serialization semantics in
    # ways that would break our JSON-by-value contracts.
    "UP042",
    # UP047: generic functions don't need PEP 695 type params yet; many
    # SDK consumers still target Python 3.12 source compat.
    "UP047",
]

[tool.ruff.lint.per-file-ignores]
# Typer commands declare options via `typer.Option(...)` / `typer.Argument(...)`
# in defaults — that IS the framework's interface, B008 is a false positive.
"packages/jw-cli/src/jw_cli/commands/*.py" = ["B008"]
"packages/jw-gen/src/jw_gen/cli.py" = ["B008"]
# The viewer is itself a Typer app; same B008 rationale applies.
"packages/jw-agents/src/jw_agents/tracing/viewer.py" = ["B008"]
# jw-gen exception classes deliberately use semantic names (SafetyRefused
# reads as "safety refused the request"; NoProviderAvailable reads as a
# state, not an error). Both inherit from RuntimeError/Exception so the
# Error suffix would be redundant.
"packages/jw-gen/src/jw_gen/safety.py" = ["N818", "SIM102"]
"packages/jw-gen/src/jw_gen/factory.py" = ["N818"]
# Tests intentionally use blind `Exception` assertions for malformed inputs.
# Tests also legitimately use lazy imports after path/sys-attribute setup,
# triggering E402 (module-level import not at top); those are deliberate.
"**/tests/*.py" = ["B017", "E402"]
# Template registries embed long-form prose paragraphs as string literals;
# breaking them across lines hurts readability and copy-paste safety more
# than the 120-char cap helps.
"packages/jw-core/src/jw_core/data/student_parts_templates.py" = ["E501"]
"packages/jw-core/src/jw_core/data/letter_templates.py" = ["E501"]
"packages/jw-core/src/jw_core/data/phone_templates.py" = ["E501"]
"packages/jw-core/src/jw_core/data/cart_templates.py" = ["E501"]
"packages/jw-core/src/jw_core/data/oratory_points.py" = ["E501"]
"packages/jw-core/src/jw_core/data/life_disclaimers.py" = ["E501"]
"packages/jw-core/src/jw_core/data/objections.py" = ["E501"]
# Encrypted-row stores need raw SQLite SQL strings + Fernet binary handling
# that ruff format doesn't break cleanly; the long lines are deliberate.
"packages/jw-agents/src/jw_agents/study_progress.py" = ["E501", "E402"]
"packages/jw-core/src/jw_core/ministry/field_report.py" = ["E501", "E402"]
# jw-mcp server.py registers ~90 tools with docstrings that cap at ~150
# chars; reformatting them obscures the contract.
"packages/jw-mcp/src/jw_mcp/server.py" = ["E501", "E402", "N806"]
# Finetune TUI uses Textual widgets with deliberate variable casing.
"packages/jw-finetune/src/jw_finetune/tui/app.py" = ["E501", "N806"]
# Finetune data extractors include long URL strings in fixtures.
"packages/jw-finetune/src/jw_finetune/data/jw_extractors.py" = ["E501", "N806"]
"packages/jw-finetune/src/jw_finetune/monitor/store.py" = ["E501"]
# Variables in UPPER_CASE locally denote literal constants (FORBIDDEN_TOKENS,
# SECTION_LABELS_*). The naming is intentional. B005 .strip(multi-char) and
# B905 zip-without-strict are intentional in known-safe call sites.
"packages/jw-core/src/jw_core/parsers/workbook.py" = ["B005"]
"packages/jw-rag/src/jw_rag/store.py" = ["B905"]
"packages/jw-core/tests/test_kingdom_songs.py" = ["N806"]
# fact_checker emits human-readable verdict prose that occasionally
# exceeds 120 chars in catalog entries.
"packages/jw-agents/src/jw_agents/fact_checker.py" = ["E501"]
# Long URL strings inside snapshot-fixture commentary.
"packages/jw-finetune/src/jw_finetune/ux/run_readme.py" = ["E501"]
# JW Library tests embed hardcoded backup JSON / pickle samples that are
# semantically single string literals and must not be split.
"packages/jw-core/tests/test_jw_library_local.py" = ["E501"]
"packages/jw-core/tests/test_jw_library_sync.py" = ["E501"]
"packages/jw-core/tests/test_obsidian_vault.py" = ["E501"]
# (study_progress + field_report deliberate-lazy-imports entries above
# already cover E402 + E501.)

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "packages/jw-core/tests",
    "packages/jw-mcp/tests",
    "packages/jw-cli/tests",
    "packages/jw-rag/tests",
    "packages/jw-agents/tests",
    "packages/jw-eval/tests",
    "packages/jw-gen/tests",
    "tests",
]
# `importlib` mode avoids namespace collisions when multiple workspace packages
# each have a tests/ folder (we have jw-core/tests/ and jw-mcp/tests/).
addopts = "--import-mode=importlib"
markers = [
    "embeddings_local: tests that require sentence-transformers + a local model download",
    "rerank_local: tests that require a local cross-encoder model download",
    "vlm_real: integration tests that hit real VLM hardware or APIs (opt-in)",
    "perf: tracing overhead guard (Fase 43)",
]
