[project]
name = "pytest-cookbook"
version = "0.1.0"
description = "pytest plugin: collect runnable Python blocks from cookbook Markdown files."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-only"
dependencies = [
    "pytest>=8.0",
]

[project.entry-points.pytest11]
cookbook = "pytest_cookbook.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_cookbook"]
